# llm-folder-organizer

./: .env.example  .gitignore  BUILD.md  PKG-INFO  README.md  README_WINDOWS.md  pyproject.toml  start.sh  start_simple.bat
.github/workflows/: build-and-release.yml  build-release.yml  build-standalone.yml  ci.yml  release.yml
configs/: default.json
prompts/: classify_file.system.txt  classify_file.user.txt
scripts/: build_local.ps1  build_local.sh  build_webui.sh  dev_run.sh  setup_env.ps1  setup_env.sh
src/llm_folder_organizer/: cli.py  config.py  extractor.py  gui.py  llm.py  organize.py  standalone_entry.py  webui.py  webui_app.py  webui_entry.py
tests/: test_extractor.py
